lib/core/api/Ximu3.h

typedef enum XIMU3_DecodeError
{
    XIMU3_DecodeErrorBufferOverrun,
    XIMU3_DecodeErrorInvalidMessageIdentifier,
    XIMU3_DecodeErrorInvalidUtf8,
    XIMU3_DecodeErrorInvalidJson,
    XIMU3_DecodeErrorJsonIsNotAnObject,
    XIMU3_DecodeErrorJsonObjectIsNotASingleKeyValuePair,
    XIMU3_DecodeErrorInvalidEscapeSequence,
    XIMU3_DecodeErrorInvalidBinaryMessageLength,
    XIMU3_DecodeErrorUnableToParseAsciiMessage,
} XIMU3_DecodeError;
typedef enum XIMU3_FileConverterStatus
{
    XIMU3_FileConverterStatusComplete,
    XIMU3_FileConverterStatusFailed,
    XIMU3_FileConverterStatusInProgress,
} XIMU3_FileConverterStatus;
typedef struct XIMU3_Connection XIMU3_Connection;
typedef struct XIMU3_FileConverter XIMU3_FileConverter;
typedef struct XIMU3_QuaternionMessage
{
    uint64_t timestamp;
    float w;
    float x;
    float y;
    float z;
} XIMU3_QuaternionMessage;
typedef struct XIMU3_RotationMatrixMessage
{
    uint64_t timestamp;
    float xx;
    float xy;
    float xz;
    float yx;
    float yy;
    float yz;
    float zx;
    float zy;
    float zz;
} XIMU3_RotationMatrixMessage;
typedef struct XIMU3_EulerAnglesMessage
{
    uint64_t timestamp;
    float roll;
    float pitch;
    float yaw;
} XIMU3_EulerAnglesMessage;
typedef struct XIMU3_LinearAccelerationMessage
{
    uint64_t timestamp;
    float quaternion_w;
    float quaternion_x;
    float quaternion_y;
    float quaternion_z;
    float acceleration_x;
    float acceleration_y;
    float acceleration_z;
} XIMU3_LinearAccelerationMessage;
typedef struct XIMU3_EarthAccelerationMessage
{
    uint64_t timestamp;
    float quaternion_w;
    float quaternion_x;
    float quaternion_y;
    float quaternion_z;
    float acceleration_x;
    float acceleration_y;
    float acceleration_z;
} XIMU3_EarthAccelerationMessage;
typedef struct XIMU3_AhrsStatusMessage
{
    uint64_t timestamp;
    float initialising;
    float angular_rate_recovery;
    float acceleration_recovery;
    float magnetic_recovery;
} XIMU3_AhrsStatusMessage;
typedef struct XIMU3_HighGAccelerometerMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_HighGAccelerometerMessage;
typedef struct XIMU3_TemperatureMessage
{
    uint64_t timestamp;
    float temperature;
} XIMU3_TemperatureMessage;
typedef struct XIMU3_BatteryMessage
{
    uint64_t timestamp;
    float percentage;
    float voltage;
    float charging_status;
} XIMU3_BatteryMessage;
typedef struct XIMU3_RssiMessage
{
    uint64_t timestamp;
    float percentage;
    float power;
} XIMU3_RssiMessage;
typedef struct XIMU3_SerialAccessoryMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_SerialAccessoryMessage;
typedef struct XIMU3_NotificationMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_NotificationMessage;
typedef struct XIMU3_ErrorMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_ErrorMessage;
typedef struct XIMU3_FileConverterProgress
{
    enum XIMU3_FileConverterStatus status;
    float percentage;
    uint64_t bytes_processed;
    uint64_t bytes_total;
} XIMU3_FileConverterProgress;
typedef void (*XIMU3_CallbackFileConverterProgress)(struct XIMU3_FileConverterProgress data, void *context);
uint64_t XIMU3_connection_add_end_of_file_callback(struct XIMU3_Connection *connection, void (*callback)(void *context), void *context);
const char *XIMU3_linear_acceleration_message_to_string(struct XIMU3_LinearAccelerationMessage message);
const char *XIMU3_earth_acceleration_message_to_string(struct XIMU3_EarthAccelerationMessage message);
const char *XIMU3_ahrs_status_message_to_string(struct XIMU3_AhrsStatusMessage message);
const char *XIMU3_high_g_accelerometer_message_to_string(struct XIMU3_HighGAccelerometerMessage message);
const char *XIMU3_temperature_message_to_string(struct XIMU3_TemperatureMessage message);
const char *XIMU3_battery_message_to_string(struct XIMU3_BatteryMessage message);
const char *XIMU3_rssi_message_to_string(struct XIMU3_RssiMessage message);
const char *XIMU3_serial_accessory_message_to_string(struct XIMU3_SerialAccessoryMessage message);
const char *XIMU3_notification_message_to_string(struct XIMU3_NotificationMessage message);
const char *XIMU3_error_message_to_string(struct XIMU3_ErrorMessage message);
struct XIMU3_EulerAnglesMessage XIMU3_quaternion_message_to_euler_angles_message(struct XIMU3_QuaternionMessage message);
struct XIMU3_EulerAnglesMessage XIMU3_rotation_matrix_message_to_euler_angles_message(struct XIMU3_RotationMatrixMessage message);
struct XIMU3_QuaternionMessage XIMU3_euler_angles_message_to_quaternion_message(struct XIMU3_EulerAnglesMessage message);
struct XIMU3_EulerAnglesMessage XIMU3_linear_acceleration_message_to_euler_angles_message(struct XIMU3_LinearAccelerationMessage message);
struct XIMU3_EulerAnglesMessage XIMU3_earth_acceleration_message_to_euler_angles_message(struct XIMU3_EarthAccelerationMessage message);
const char *XIMU3_decode_error_to_string(enum XIMU3_DecodeError decode_error);
const char *XIMU3_file_converter_status_to_string(enum XIMU3_FileConverterStatus status);
const char *XIMU3_file_converter_progress_to_string(struct XIMU3_FileConverterProgress progress);
struct XIMU3_FileConverter *XIMU3_file_converter_new(const char *destination, const char *name, const char *const *files, uint32_t length, XIMU3_CallbackFileConverterProgress callback, void *context);