lib/core/api/ximu3_bindings.g.dart


  late final _XIMU3_linear_acceleration_message_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_LinearAccelerationMessage)>>(
      'XIMU3_linear_acceleration_message_to_string');
  late final _XIMU3_linear_acceleration_message_to_string =
      _XIMU3_linear_acceleration_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_LinearAccelerationMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_earth_acceleration_message_to_string(
    XIMU3_EarthAccelerationMessage message,
  ) {
    return _XIMU3_earth_acceleration_message_to_string(
      message,
    );
  }

  late final _XIMU3_earth_acceleration_message_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_EarthAccelerationMessage)>>(
      'XIMU3_earth_acceleration_message_to_string');
  late final _XIMU3_earth_acceleration_message_to_string =
      _XIMU3_earth_acceleration_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_EarthAccelerationMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_ahrs_status_message_to_string(
    XIMU3_AhrsStatusMessage message,
  ) {
    return _XIMU3_ahrs_status_message_to_string(
      message,
    );
  }

  late final _XIMU3_ahrs_status_message_to_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              XIMU3_AhrsStatusMessage)>>('XIMU3_ahrs_status_message_to_string');
  late final _XIMU3_ahrs_status_message_to_string =
      _XIMU3_ahrs_status_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_AhrsStatusMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_high_g_accelerometer_message_to_string(
    XIMU3_HighGAccelerometerMessage message,
  ) {
    return _XIMU3_high_g_accelerometer_message_to_string(
      message,
    );
  }

  late final _XIMU3_high_g_accelerometer_message_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_HighGAccelerometerMessage)>>(
      'XIMU3_high_g_accelerometer_message_to_string');
  late final _XIMU3_high_g_accelerometer_message_to_string =
      _XIMU3_high_g_accelerometer_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_HighGAccelerometerMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_temperature_message_to_string(
    XIMU3_TemperatureMessage message,
  ) {
    return _XIMU3_temperature_message_to_string(
      message,
    );
  }

  late final _XIMU3_temperature_message_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_TemperatureMessage)>>(
      'XIMU3_temperature_message_to_string');
  late final _XIMU3_temperature_message_to_string =
      _XIMU3_temperature_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_TemperatureMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_battery_message_to_string(
    XIMU3_BatteryMessage message,
  ) {
    return _XIMU3_battery_message_to_string(
      message,
    );
  }

  late final _XIMU3_battery_message_to_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              XIMU3_BatteryMessage)>>('XIMU3_battery_message_to_string');
  late final _XIMU3_battery_message_to_string =
      _XIMU3_battery_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_BatteryMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_rssi_message_to_string(
    XIMU3_RssiMessage message,
  ) {
    return _XIMU3_rssi_message_to_string(
      message,
    );
  }

  late final _XIMU3_rssi_message_to_stringPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(XIMU3_RssiMessage)>>(
      'XIMU3_rssi_message_to_string');
  late final _XIMU3_rssi_message_to_string = _XIMU3_rssi_message_to_stringPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(XIMU3_RssiMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_serial_accessory_message_to_string(
    XIMU3_SerialAccessoryMessage message,
  ) {
    return _XIMU3_serial_accessory_message_to_string(
      message,
    );
  }

  late final _XIMU3_serial_accessory_message_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_SerialAccessoryMessage)>>(
      'XIMU3_serial_accessory_message_to_string');
  late final _XIMU3_serial_accessory_message_to_string =
      _XIMU3_serial_accessory_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_SerialAccessoryMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_notification_message_to_string(
    XIMU3_NotificationMessage message,
  ) {
    return _XIMU3_notification_message_to_string(
      message,
    );
  }

  late final _XIMU3_notification_message_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_NotificationMessage)>>(
      'XIMU3_notification_message_to_string');
  late final _XIMU3_notification_message_to_string =
      _XIMU3_notification_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_NotificationMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_error_message_to_string(
    XIMU3_ErrorMessage message,
  ) {
    return _XIMU3_error_message_to_string(
      message,
    );
  }

  late final _XIMU3_error_message_to_stringPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(XIMU3_ErrorMessage)>>(
      'XIMU3_error_message_to_string');
  late final _XIMU3_error_message_to_string = _XIMU3_error_message_to_stringPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(XIMU3_ErrorMessage)>();

  XIMU3_EulerAnglesMessage XIMU3_quaternion_message_to_euler_angles_message(
    XIMU3_QuaternionMessage message,
  ) {
    return _XIMU3_quaternion_message_to_euler_angles_message(
      message,
    );
  }

  late final _XIMU3_quaternion_message_to_euler_angles_messagePtr = _lookup<
          ffi.NativeFunction<
              XIMU3_EulerAnglesMessage Function(XIMU3_QuaternionMessage)>>(
      'XIMU3_quaternion_message_to_euler_angles_message');
  late final _XIMU3_quaternion_message_to_euler_angles_message =
      _XIMU3_quaternion_message_to_euler_angles_messagePtr.asFunction<
          XIMU3_EulerAnglesMessage Function(XIMU3_QuaternionMessage)>();

  XIMU3_EulerAnglesMessage
      XIMU3_rotation_matrix_message_to_euler_angles_message(
    XIMU3_RotationMatrixMessage message,
  ) {
    return _XIMU3_rotation_matrix_message_to_euler_angles_message(
      message,
    );
  }

  late final _XIMU3_rotation_matrix_message_to_euler_angles_messagePtr =
      _lookup<
              ffi.NativeFunction<
                  XIMU3_EulerAnglesMessage Function(
                      XIMU3_RotationMatrixMessage)>>(
          'XIMU3_rotation_matrix_message_to_euler_angles_message');
  late final _XIMU3_rotation_matrix_message_to_euler_angles_message =
      _XIMU3_rotation_matrix_message_to_euler_angles_messagePtr.asFunction<
          XIMU3_EulerAnglesMessage Function(XIMU3_RotationMatrixMessage)>();

  XIMU3_QuaternionMessage XIMU3_euler_angles_message_to_quaternion_message(
    XIMU3_EulerAnglesMessage message,
  ) {
    return _XIMU3_euler_angles_message_to_quaternion_message(
      message,
    );
  }

  late final _XIMU3_euler_angles_message_to_quaternion_messagePtr = _lookup<
          ffi.NativeFunction<
              XIMU3_QuaternionMessage Function(XIMU3_EulerAnglesMessage)>>(
      'XIMU3_euler_angles_message_to_quaternion_message');
  late final _XIMU3_euler_angles_message_to_quaternion_message =
      _XIMU3_euler_angles_message_to_quaternion_messagePtr.asFunction<
          XIMU3_QuaternionMessage Function(XIMU3_EulerAnglesMessage)>();

  XIMU3_EulerAnglesMessage
      XIMU3_linear_acceleration_message_to_euler_angles_message(
    XIMU3_LinearAccelerationMessage message,
  ) {
    return _XIMU3_linear_acceleration_message_to_euler_angles_message(
      message,
    );
  }

  late final _XIMU3_linear_acceleration_message_to_euler_angles_messagePtr =
      _lookup<
              ffi.NativeFunction<
                  XIMU3_EulerAnglesMessage Function(
                      XIMU3_LinearAccelerationMessage)>>(
          'XIMU3_linear_acceleration_message_to_euler_angles_message');
  late final _XIMU3_linear_acceleration_message_to_euler_angles_message =
      _XIMU3_linear_acceleration_message_to_euler_angles_messagePtr.asFunction<
          XIMU3_EulerAnglesMessage Function(XIMU3_LinearAccelerationMessage)>();

  XIMU3_EulerAnglesMessage
      XIMU3_earth_acceleration_message_to_euler_angles_message(
    XIMU3_EarthAccelerationMessage message,
  ) {
    return _XIMU3_earth_acceleration_message_to_euler_angles_message(
      message,
    );
  }

  late final _XIMU3_earth_acceleration_message_to_euler_angles_messagePtr =
      _lookup<
              ffi.NativeFunction<
                  XIMU3_EulerAnglesMessage Function(
                      XIMU3_EarthAccelerationMessage)>>(
          'XIMU3_earth_acceleration_message_to_euler_angles_message');
  late final _XIMU3_earth_acceleration_message_to_euler_angles_message =
      _XIMU3_earth_acceleration_message_to_euler_angles_messagePtr.asFunction<
          XIMU3_EulerAnglesMessage Function(XIMU3_EarthAccelerationMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_decode_error_to_string(
    int decode_error,
  ) {
    return _XIMU3_decode_error_to_string(
      decode_error,
    );
  }

  late final _XIMU3_decode_error_to_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
          'XIMU3_decode_error_to_string');
  late final _XIMU3_decode_error_to_string = _XIMU3_decode_error_to_stringPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  ffi.Pointer<ffi.Char> XIMU3_file_converter_status_to_string(
    int status,
  ) {
    return _XIMU3_file_converter_status_to_string(
      status,
    );
  }

  late final _XIMU3_file_converter_status_to_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
          'XIMU3_file_converter_status_to_string');
  late final _XIMU3_file_converter_status_to_string =
      _XIMU3_file_converter_status_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(int)>();

  ffi.Pointer<ffi.Char> XIMU3_file_converter_progress_to_string(
    XIMU3_FileConverterProgress progress,
  ) {
    return _XIMU3_file_converter_progress_to_string(
      progress,
    );
  }

  late final _XIMU3_file_converter_progress_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_FileConverterProgress)>>(
      'XIMU3_file_converter_progress_to_string');
  late final _XIMU3_file_converter_progress_to_string =
      _XIMU3_file_converter_progress_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_FileConverterProgress)>();

  ffi.Pointer<XIMU3_FileConverter> XIMU3_file_converter_new(
    ffi.Pointer<ffi.Char> destination,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Pointer<ffi.Char>> files,
    int length,
    XIMU3_CallbackFileConverterProgress callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_file_converter_new(
      destination,
      name,
      files,
      length,
      callback,
      context,
    );
  }
